--- a/CV_zh/header.tex
+++ b/CV_zh/header.tex
@@ -1,9 +1,9 @@
 \newcommand{\myheader}{
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\href{http://www.github.com/charlesliucn}{\LARGE 刘前}{(Charles Liu)}} & 17888833508$\,${\color{labelgrey}(手机)} \\
-  \href{http://www.github.com/charlesliucn}{www.github.com/charlesliucn}$\,${\color{labelgrey}(GitHub)} & \href{mailto:charleyliu.cn@gmail.com}{charleyliu.cn@gmail.com}$\,${\color{labelgrey}(邮件)}\\
-  北京市海淀区清华大学$\,${\color{labelgrey}(地址)} & 100084$\,${\color{labelgrey}(邮编)}\\
- 申请学位：数据科学与信息技术研究中心 &  物联网和社会物理信息系统实验室\\
-  \end{tabular*}\\\vspace{0.1in}}
+  \textbf{\href{http://www.github.com/charlesliucn}{\LARGE 刘前}} &21岁$\,$ {\color{labelgrey}(年龄)} \\
+  预备党员 $\,${\color{labelgrey}(政治面貌)} & 汉族 $\,${\color{labelgrey}(民族)}\\
+  \textbf{17888833508}$\,${\color{labelgrey}(手机)} & \href{mailto:liuqian14@mails.tsinghua.edu.cn}{\textbf{liuqian14@mails.tsinghua.edu.cn}}$\,${\color{labelgrey}(邮箱)}\\
+  \href{http://www.github.com/charlesliucn}{www.github.com/charlesliucn}$\,${\color{labelgrey}(GitHub)} & 北京市海淀区清华大学$\,${\color{labelgrey}(地址)}\\
+  \end{tabular*}\\\vspace{0.15in}}
 
 \myheader
