--- a/CV_zh/skills.tex
+++ b/CV_zh/skills.tex
@@ -1,11 +1,9 @@
 \resheading{个人技能}
   \begin{itemize}[leftmargin=*]
-    \item \textbf{操作系统}: Windows，Linux
+    \item \textbf{操作系统}: Windows，Linux(Ubuntu)
 
-    \item \textbf{编程语言}: C/C++，Python，MATLAB，R，SQL，Verilog，Git，SAS，
+    \item \textbf{编程语言}: C/C++，Python，MATLAB，R，Verilog，SAS，
     \href{http://www.latex-project.org/}{\LaTeX}
 
-    \item \textbf{开发平台}: Ubuntu，Tensorflow，PyTorch，\href{https://sourceforge.net/projects/kaldi/}Kaldi(语音识别)，\href{http://shiny.rstudio.com/}{Shiny App}
-
-    \item \textbf{英语能力}: 全国大学英语：四级(604)，六级(556)，清华大学英语水平考试：96.75，6级(共7级)
+    \item \textbf{英语能力}: 全国大学英语：四级(604)，六级(556)，清华大学英语水平：96.75/120
   \end{itemize}
