--- a/CV_zh/work.tex
+++ b/CV_zh/work.tex
@@ -1,10 +1,9 @@
-\resheading{社会工作}
+\resheading{学校/社会工作}
   \begin{itemize}[leftmargin=*]
     \item
-      \ressubsingleline{清华大学电子系学生会}{学习部成员，副部长}{2015.09 -- 2017.03}
-	\item
-      \ressubsingleline{清华大学水木信箱志愿项目}{组员，笔友志愿者}{2015.07 -- 2016.08}
+      \ressubsingleline{清华大学水木信箱志愿项目}{笔友志愿组}{2014.11 -- 2016.08}
     \item
-      \ressubsingleline{班级党小组}{组长}{2015.07 -- 2016.09}
-
+      \ressubsingleline{清华大学电子系无47班}{党课小组组长}{2015.09 -- 2016.08}
+     \item
+      \ressubsingleline{清华大学电子系学生会}{学习部副部长}{2015.09 -- 2017.03}
   \end{itemize}
