--- a/CV_zh/education.tex
+++ b/CV_zh/education.tex
@@ -4,20 +4,26 @@
       \ressubheading{\href{http://www.tsinghua.edu.cn/publish/newthu/index.html}{清华大学}}{工学学士}{\href{http://www.sist.tsinghua.edu.cn/docinfo/index.jsp}{信息科学技术学院} $\cdot$ \href{http://www.ee.tsinghua.edu.cn/}{电子工程}}{2014.08 至今}
       {\small
       \begin{itemize}
-        \item{基础课程：复变函数与数理方程(100)，微积分(94)，线性代数(92)，量子与统计(90)}
+        \item{基础课程：微积分(94)，线性代数(92)，复变函数与数理方程(100)}
 
-        \item{专业课程: \textbf{网络技术基础(98)}，\textbf{通信与网络}，\textbf{数据结构与算法}，\textbf{操作系统(85)}，\textbf{统计信号处理(87)}，随机过程(91)，媒体与认知(90)，数字图像处理(86)，数字逻辑与处理器基础(86)}
+        \item{专业课程: 网络技术基础(98)，数据结构与算法，操作系统(85)，统计信号处理(87)，随机过程(91)，媒体与认知(90)，数字图像处理(86)，数字逻辑与处理器基础(86)}
 
-        \item{实验课程：MATLAB工程应用(97)，电磁场与微波实验(94)，大学物理实验(93)，电子电路与系统基础实验(93)，电子电路课程设计(93)，数字逻辑与处理器基础实验(89)，物理电子学实验(89)}
+        \item{实验课程：MATLAB工程应用(97)，电子电路课程设计(93)，数字逻辑与处理器基础实验(89)}
 
-        \item{兴趣课程:数据库(96)，信息科学技术概论(95)，文献检索与利用(93)，计算机文化基础(93)，西方哲学史(93)，高级科技英语(90)，科学技术史系列讲座(87)}
+        \item{兴趣课程: 数据库(96)，信息科学技术概论(95)，文献检索与利用(93)，计算机文化基础(93)，高级科技英语(90)，科学技术史 系列讲座(87)}
+        
+        \item{网络课程: Coursera - CS229(机器学习)，Stanford - CS224n(深度学习与自然语言处理)}
       \end{itemize}
       }
     \item
       \ressubheading{清华大学}{辅修学位}{\href{http://www.stat.tsinghua.edu.cn/}{统计学研究中心} $\cdot$ 统计学}{2016.08 至今}
       {\small
       \begin{itemize}
-        \item{专业课程：数据科学导论(91)，初等概率论(88)，线性回归分析，统计推断，数据挖掘，多元统计}
+        \item{专业课程：数据科学导论(91)，金融统计(91)，初等概率论(88)，线性回归分析，统计推断，统计计算，数据挖掘，多元统计分析}
       \end{itemize}
       }
+    \item
+      \ressubheading{\href{http://www.tsinghua.edu.cn/publish/newthu/index.html}{清华大学}}{硕士(保研)}{\href{http://www.sist.tsinghua.edu.cn/docinfo/index.jsp}{信息科学技术学院} $\cdot$ \href{http://www.ee.tsinghua.edu.cn/}{电子工程}}{2018.08起}
+    
+    ~\\
   \end{itemize}
