--- a/CV_zh/CV_zh_0405/skills.tex
+++ b/CV_zh/CV_zh_0405/skills.tex
@@ -1,11 +1,9 @@
 \resheading{个人技能}
   \begin{itemize}[leftmargin=*]
-    \item \textbf{操作系统}: Windows，Linux
+    \item \textbf{操作系统}: Windows，Linux(Ubuntu)
 
-    \item \textbf{编程语言}: R，Python，Shell，MATLAB，C/C++，Java，Verilog，SAS，
+    \item \textbf{编程语言}: C/C++，Python，MATLAB，R，Verilog，SAS，
     \href{http://www.latex-project.org/}{\LaTeX}
-    
-    \item \textbf{工具包}: Kaldi，Gensim，Tensorflow
 
     \item \textbf{英语能力}: 全国大学英语：四级(604)，六级(556)，清华大学英语水平：96.75/120
   \end{itemize}
