--- a/CV_zh/CV_zh_0502/education.tex
+++ b/CV_zh/CV_zh_0502/education.tex
@@ -6,13 +6,13 @@
       \begin{itemize}
         \item{基础课程：微积分(94)，线性代数(92)，复变函数与数理方程(100)}
 
-        \item{专业课程: 网络技术基础(98)，操作系统(85)，统计信号处理(87)，随机过程(91)，媒体与认知(90)，数据结构与算法，数字图像处理(86)，数字逻辑与处理器基础(86)}
+        \item{专业课程: 网络技术基础(98)，数据结构与算法，操作系统(85)，统计信号处理(87)，随机过程(91)，媒体与认知(90)，数字图像处理(86)，数字逻辑与处理器基础(86)}
 
         \item{实验课程：MATLAB工程应用(97)，电子电路课程设计(93)，数字逻辑与处理器基础实验(89)}
 
         \item{兴趣课程: 数据库(96)，信息科学技术概论(95)，文献检索与利用(93)，计算机文化基础(93)，高级科技英语(90)，科学技术史 系列讲座(87)}
         
-        \item{CS229(Cousera机器学习网络课程)}
+        \item{网络课程: Coursera - CS229(机器学习)，Stanford - CS224n(深度学习与自然语言处理)}
       \end{itemize}
       }
     \item
