--- a/CV_zh/CV_zh_0502/projects.tex
+++ b/CV_zh/CV_zh_0502/projects.tex
@@ -4,8 +4,8 @@
       {\small
       \begin{itemize}
         \item 环境配置: Ubuntu, Python, Tensorflow
-        \item 项目简介: 基于现有的循环神经网络(RNN/LSTM等)语言模型，使用不同的word2vec方法，改进词表示(Representation)的效果，降低语言模型的困惑度(Perplexity)。
-        \item 个人工作: 基于Tensorflow，复现Skip-Gram、CBOW、Clove等word2vec算法，将训练得到的词向量作为RNN语言模型的输入或者参数初始值，比较三种方法对语言模型性能的影响。同时，将基于字符的整词向量生成方法(Char-CNN-LSTM)引入语音识别的语言建模中，提升语言建模及语音识别的效果。
+        \item 项目简介: 基于现有的循环神经网络(RNN/LSTM等)语言模型，使用不同的word2vec方法，改进词表示(Representation)的效果，降低语言模型的困惑度(Perplexity)；并且，尝试将Attention机制引入神经网络语言模型。
+        \item 个人工作: 复现Skip-Gram、CBOW、Clove等word2vec算法，将训练得到的词向量作为RNN语言模型的输入，比较三种方法对语言模型性能的影响。同时，将NLP中广泛使用的Attention机制引入语言模型。
       \end{itemize}
       }
 
@@ -14,7 +14,16 @@
       \begin{itemize}
         \item 环境配置: Ubuntu, Kaldi, Shell
         \item 项目简介: 基于美国国家标准与技术研究院(NIST)2016年的OpenKWS评测，使用低资源语种(格鲁吉亚语)进行低资源语音识别系统的优化。使用发音字典生成、词表优化、数据筛选、模型插值融合等方法对语言模型的性能进行改进。
-        \item 个人工作: 对格鲁吉亚语网络数据进行清洗、预处理，统计词频对词表进行扩充，减少开发集上的集外词比例；使用Morfessor工具生成现有词表的发音字典；按照一定原则，从网络数据中筛选出与训练数据类似的文本作为扩充数据，筛选方法包括：困惑度(Perplexity)排序、交叉熵距离排序、TF-IDF文本相似度比较、基于doc2vec的文本相似度比较等。经过以上优化，最终在声学模型不变的基础上，低资源语音识别系统的词错误率(WER)有3.9\%的提升(相对提升7.7\%)。
+        \item 个人工作: 对格鲁吉亚语网络数据进行清洗、预处理，统计词频对词表进行扩充，减少开发集上的集外词比例；使用Morfessor工具生成现有词表的发音字典；按照一定原则，从网络数据中筛选出与训练数据类似的文本作为扩充数据，筛选方法包括：困惑度(Perplexity)排序、交叉熵距离排序、TF-IDF文本相似度比较、LSI模型分析、基于doc2vec的文本相似度比较等。经过以上优化，最终在声学模型不变的基础上，低资源语音识别系统的词错误率(WER)有3.9\%的提升。
+      \end{itemize}
+      }
+
+    \item \ressubsingleline{基于上证50指数成分股的金融数据分析}{R}{2017.09 -- 2017.10}
+      {\small
+      \begin{itemize}
+        \item 环境配置: Windows, R
+        \item 项目简介: 使用金融统计课程所学的统计方法，对上证50指数10余年的股价尝试基本的数据分析，从中得出一些具有参考价值的结论。
+        \item 个人工作: 基于上证50指数的数据，分别使用线性时间序列、资产波动率模型、因子模型进行初步分析，并且进行了投资组合分析与优化，用资本资产定价模型(CAPM)刻画了金融市场中的均衡问题。
       \end{itemize}
       }
 
@@ -44,15 +53,6 @@
 	    \item 个人工作: 从空间和时间两个角度，使用基础的机器学习方法(线性回归、LASOO回归等)分析天气等因素对公共自行车使用情况的影响，并基于分析结果，对公共自行车的分配提出了可行的建议，实现了一款Shiny App，向公共自行车使用者提供了路线查询等功能。
 	  \end{itemize}
 	  }
-
-      \item \ressubsingleline{基于上证50指数成分股的金融数据分析}{R}{2016.10 -- 2016.11}
-      {\small
-      \begin{itemize}
-        \item 环境配置: Windows, R
-        \item 项目简介: 使用金融统计课程所学的统计方法，对上证50指数10余年的股价尝试基本的数据分析，从中得出一些具有参考价值的结论。
-        \item 个人工作: 基于上证50指数的数据，分别使用线性时间序列、资产波动率模型、因子模型进行初步分析，并且进行了投资组合分析与优化，用资本资产定价模型(CAPM)刻画了金融市场中的均衡问题。
-      \end{itemize}
-      }
 
     \item \ressubsingleline{MIPS处理器设计与实现}{Verilog}{2016.06  -- 2016.07}
     {\small
