--- a/CV_zh/skills.tex
+++ b/CV_zh/skills.tex
@@ -1,11 +1,8 @@
 \resheading{个人技能}
   \begin{itemize}[leftmargin=*]
-    \item \textbf{操作系统}: Windows，Linux
-
-    \item \textbf{编程语言}: R，Python，Shell，MATLAB，C/C++，Java，Verilog，SAS，
-    \href{http://www.latex-project.org/}{\LaTeX}
+    \item \textbf{编程语言}: Python，R，Shell，MATLAB，C/C++，Java
     
-    \item \textbf{工具包}: Kaldi，Gensim，Tensorflow
+    \item \textbf{工具包}: Kaldi，SRILM, RNNLM, Tensorflow
 
     \item \textbf{英语能力}: 全国大学英语：四级(604)，六级(556)，清华大学英语水平：96.75/120
   \end{itemize}
