--- a/CV_zh/education.tex
+++ b/CV_zh/education.tex
@@ -1,7 +1,7 @@
 \resheading{教育经历}
   \begin{itemize}[leftmargin=*]
     \item
-      \ressubheading{\href{http://www.tsinghua.edu.cn/publish/newthu/index.html}{清华大学}}{工学学士}{\href{http://www.sist.tsinghua.edu.cn/docinfo/index.jsp}{信息科学技术学院} $\cdot$ \href{http://www.ee.tsinghua.edu.cn/}{电子工程}}{2014.08 至今}
+      \ressubheading{\href{http://www.tsinghua.edu.cn/publish/newthu/index.html}{清华大学}}{工学学士}{\href{http://www.sist.tsinghua.edu.cn/docinfo/index.jsp}{信息科学技术学院} $\cdot$ \href{http://www.ee.tsinghua.edu.cn/}{电子工程}}{2014.08 -- 2018.07}
       {\small
       \begin{itemize}
         \item{基础课程：微积分(94)，线性代数(92)，复变函数与数理方程(100)}
@@ -11,19 +11,22 @@
         \item{实验课程：MATLAB工程应用(97)，电子电路课程设计(93)，数字逻辑与处理器基础实验(89)}
 
         \item{兴趣课程: 数据库(96)，信息科学技术概论(95)，文献检索与利用(93)，计算机文化基础(93)，高级科技英语(90)，科学技术史 系列讲座(87)}
-        
-        \item{CS229(Cousera机器学习网络课程)}
       \end{itemize}
       }
     \item
-      \ressubheading{清华大学}{辅修学位}{\href{http://www.stat.tsinghua.edu.cn/}{统计学研究中心} $\cdot$ 统计学}{2016.08 至今}
+      \ressubheading{清华大学}{理学辅修学士}{\href{http://www.stat.tsinghua.edu.cn/}{统计学研究中心} $\cdot$ 统计学}{2016.08 -- 2018.07}
       {\small
       \begin{itemize}
         \item{专业课程：数据科学导论(91)，金融统计(91)，初等概率论(88)，线性回归分析，统计推断，统计计算，数据挖掘，多元统计分析}
       \end{itemize}
       }
     \item
-      \ressubheading{\href{http://www.tsinghua.edu.cn/publish/newthu/index.html}{清华大学}}{硕士(保研)}{\href{http://www.sist.tsinghua.edu.cn/docinfo/index.jsp}{信息科学技术学院} $\cdot$ \href{http://www.ee.tsinghua.edu.cn/}{电子工程}}{2018.08起}
-    
+      \ressubheading{\href{http://www.tsinghua.edu.cn/publish/newthu/index.html}{清华大学}}{工学硕士}{\href{http://www.sist.tsinghua.edu.cn/docinfo/index.jsp}{信息科学技术学院} $\cdot$ \href{http://www.ee.tsinghua.edu.cn/}{电子工程}}{2018.08 -- 2020.07(预计)}
+      {\small
+      \begin{itemize}
+        \item{专业课程：最优化方法，大数据分析，计算语言学，人机语音通信}
+      \end{itemize}
+      }
+
     ~\\
   \end{itemize}
