--- a/CV_zh/intern.tex
+++ b/CV_zh/intern.tex
@@ -1,7 +1,7 @@
 \resheading{实习经历}
   \begin{itemize}[leftmargin=*]
     \item
-     \ressubsingleline{\href{http://www.tsinghua-ieit.com/}{清华大学天津电子信息研究院}}{智能家居研发平台}{2017.06 至今}
+     \ressubsingleline{\href{http://www.tsinghua-ieit.com/}{清华大学天津电子信息研究院}}{智能家居研发平台}{2017.06 -- 2017.08}
       {\small
       \begin{itemize}
         \item 智能家居行业调研分析：开展实习项目前，对智能家居行业技术和发展进行调研分析。
@@ -10,4 +10,16 @@
         统。
       \end{itemize}
       }
+  \end{itemize}
+  \begin{itemize}[leftmargin=*]
+  \item
+   \ressubsingleline{\href{https://www.ycpai.com/p_87329}{北京华控智加科技有限公司}}{语音识别实习生}{2018.09 至今}
+    {\small
+    \begin{itemize}
+      \item 在现有声学模型基础上，对新的长音频数据及标注进行对齐与分割，用于声学模型进一步训练；
+      \item 为现有的中文声学模型增加语音训练数据，对声学模型滚动训练；
+      \item 语言模型的词表扩充，数据筛选扩充与模型插值融合；
+      \item 解码器研发：针对大语言模型的高效解码方法。
+    \end{itemize}
+    }
   \end{itemize}
