Update Resume in English

--- a/CV_en/awards.tex
+++ b/CV_en/awards.tex
@@ -1,10 +1,75 @@
-\resheading{获奖情况}
-  \begin{itemize}[leftmargin=*]
-    \item \ressubsingleline{国家励志奖学金}{校级}{2016.10}
-    \item \ressubsingleline{清华大学新生二等奖学金}{校级}{2014.09}
-    \item \ressubsingleline{清华大学学业进步优秀奖学金}{校级}{2015.10}
-    \item \ressubsingleline{清华大学公益活动优秀奖学金}{校级}{2015.10}
-    \item \ressubsingleline{清华大学三星级紫荆志愿者}{校级}{2015.12}
-    \item \ressubsingleline{全国部分地区大学生物理竞赛}{A类二等奖}{2015.12}
-    \item \ressubsingleline{全国高中数学联赛省级一等奖}{省级}{2013.10}
-  \end{itemize}
+%-------------------------------------------------------------------------------
+%   SECTION TITLE
+%-------------------------------------------------------------------------------
+\cvsection{Honors \& Awards}
+
+
+
+%-------------------------------------------------------------------------------
+%   SUBSECTION TITLE
+%-------------------------------------------------------------------------------
+\cvsubsection{National}
+
+
+%-------------------------------------------------------------------------------
+%   CONTENT
+%-------------------------------------------------------------------------------
+\begin{cvhonors}
+
+%---------------------------------------------------------
+  \cvhonor
+    {Top 20\%}
+    {National Encouragement Scholarship} % Award
+    {Beijing, China} % Location
+    {2016} % Date(s)
+%---------------------------------------------------------
+
+  \cvhonor
+    {Second Prize} % Award
+    {Physics Contest of College Students of Beijing} % Event
+    {Beijing, China} % Location
+    {2016} % Date(s)
+
+%---------------------------------------------------------
+  \cvhonor
+    {First Prize} % Award
+    {Mathematics Contests for Senior High School Students} % Event
+    {Urumqi, China} % Location
+    {2013} % Date(s)
+
+
+\end{cvhonors}
+
+%-------------------------------------------------------------------------------
+%   SUBSECTION TITLE
+%-------------------------------------------------------------------------------
+\cvsubsection{Intramural}
+
+
+%-------------------------------------------------------------------------------
+%   CONTENT
+%-------------------------------------------------------------------------------
+\begin{cvhonors}
+
+%---------------------------------------------------------
+  \cvhonor
+    {Top 20\%}
+    {Outstanding Scholarship for Academic Progress (×2)} % Event
+    {Tsinghua University} % Location
+    {2017} % Date(s)
+
+%---------------------------------------------------------
+  \cvhonor
+    {Three-Star Volunteer}
+    {Outstanding Scholarship for Public Volunteering Activities (×2)} % Event
+    {Tsinghua University} % Location
+    {2016} % Date(s)
+
+%---------------------------------------------------------
+  \cvhonor
+    {Second Prize} % Award
+    {Outstanding Freshman Scholarship (four-year scholarship)} % Event
+    {Tsinghua University} % Location
+    {2014} % Date(s)
+
+\end{cvhonors}
