--- a/CV_en/education.tex
+++ b/CV_en/education.tex
@@ -1,9 +1,49 @@
-\resheading{EDUCATION}
-  \begin{itemize}[leftmargin=*]
-    \item
-      \ressubheading{\href{http://www.tsinghua.edu.cn/publish/newthu/index.html}{Tsinghua University}}{Bachelor}{\href{http://www.sist.tsinghua.edu.cn/docinfo/index.jsp}{School of EECS} $\cdot$ \href{http://www.ee.tsinghua.edu.cn/}{EE}}{2014/08 -- 2018/07}
-    \item
-      \ressubheading{Tsinghua University}{Minor Degree}{\href{http://www.stat.tsinghua.edu.cn/}{Center for Statistical Science}}{2016/08 -- 2018/07}
-    \item
-      \ressubheading{\href{http://www.tsinghua.edu.cn/publish/newthu/index.html}{Tsinghua University}}{Master}{\href{http://www.sist.tsinghua.edu.cn/docinfo/index.jsp}{School of EECS} $\cdot$ \href{http://www.ee.tsinghua.edu.cn/}{EE}}{2018.08 -- 2020.07(Expected)}
-  \end{itemize}
+%-------------------------------------------------------------------------------
+% SECTION TITLE
+%-------------------------------------------------------------------------------
+\cvsection{Education}
+
+
+%-------------------------------------------------------------------------------
+% CONTENT
+%-------------------------------------------------------------------------------
+\begin{cventries}
+
+%---------------------------------------------------------
+  \cventry
+    {B.S. in Electronic Engineering} % Degree
+    {Tsinghua University} % Institution
+    {Beijing, China} % Location
+    {Aug. 2014 - July 2018} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {Courses: Machine Learning, Data Structure \& Algorithms, 
+        Digital Image Processing, Operating System, Database}
+      \end{cvitems}
+    }
+
+  \cventry
+    {Minor Degree in Statistics} % Degree
+    {Tsinghua University} % Institution
+    {Beijing, China} % Location
+    {Aug. 2016 - July 2018} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {Courses: Data Mining, Statistical Inference, Statistical Computing, Financial Statistics}
+      \end{cvitems}
+    }
+  
+  \cventry
+    {M.S. in Electronic Engineering} % Degree
+    {Tsinghua University} % Institution
+    {Beijing, China} % Location
+    {Aug. 2018 - Exp. July 2020} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {Courses: Optimization, Big Data Analytics, Computational Linguistics, Speech and Language Processing}
+      \end{cvitems}
+    }
+
+
+%---------------------------------------------------------
+\end{cventries}
