--- a/CV_en/work.tex
+++ b/CV_en/work.tex
@@ -1,9 +1,41 @@
-\resheading{学校/社会工作}
-  \begin{itemize}[leftmargin=*]
-    \item
-      \ressubsingleline{清华大学水木信箱志愿项目}{笔友志愿组}{2014.11 -- 2016.08}
-    \item
-      \ressubsingleline{清华大学电子系无47班}{党课小组组长}{2015.09 -- 2016.08}
-     \item
-      \ressubsingleline{清华大学电子系学生会}{学习部副部长}{2015.09 -- 2017.03}
-  \end{itemize}
+%-------------------------------------------------------------------------------
+%	SECTION TITLE
+%-------------------------------------------------------------------------------
+\cvsection{Extracurricular Activity}
+
+
+%-------------------------------------------------------------------------------
+%	CONTENT
+%-------------------------------------------------------------------------------
+\begin{cventries}
+
+%---------------------------------------------------------
+  \cventry
+    {Core Member \& President at 2013} % Affiliation/role
+    {PoApper (Developers' Network of POSTECH)} % Organization/group
+    {Pohang, S.Korea} % Location
+    {Jun. 2010 - PRESENT} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of experience/contributions/knowledge
+        \item {Reformed the society focusing on software engineering and building network on and off campus.}
+        \item {Proposed various marketing and network activities to raise awareness.}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Member} % Affiliation/role
+    {PLUS (Laboratory for UNIX Security in POSTECH)} % Organization/group
+    {Pohang, S.Korea} % Location
+    {Sep. 2010 - Oct. 2011} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of experience/contributions/knowledge
+        \item {Gained expertise in hacking \& security areas, especially about internal of operating system based on UNIX and several exploit techniques.}
+        \item {Participated on several hacking competition and won a good award.}
+        \item {Conducted periodic security checks on overall IT system as a member of POSTECH CERT.}
+        \item {Conducted penetration testing commissioned by national agency and corporation.}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+\end{cventries}
